New: Magick library

--- a/options.ini
+++ b/options.ini
@@ -1,11 +1,15 @@
-[screen]
-width=800
-height=600
+[colorsWeights]
+red=0.30
+green=0.59
+blue=0.11
 [characters]
+chars= .,:;ox%#@
 size=13
 width=8
 height=15
-color=14531532
-monospace=true
+antialiasing=false
 [image]
-threshold=0.2
+backgroundColor=#000000
+[regions]
+columns=3
+rows=3
