--- a/options.ini
+++ b/options.ini
@@ -3,13 +3,13 @@ red=0.30
 green=0.59
 blue=0.11
 [characters]
-chars= .,:;ox%#@
-size=13
-width=8
-height=15
+chars= ._oxXO+@vuY*-/\|^
+size=22
+width=16
+height=20
 antialiasing=false
 [image]
 backgroundColor=#000000
 [regions]
-columns=3
-rows=3
+columns=4
+rows=4
