Implemented: setting image threshold and string output

--- a/options.ini
+++ b/options.ini
@@ -3,13 +3,15 @@ red=0.30
 green=0.59
 blue=0.11
 [characters]
-chars= ._oxXO+@vuY*-/\|^
-size=22
+chars=/[]o)(+\.:;
+size=18
 width=16
 height=20
 antialiasing=false
 [image]
 backgroundColor=#000000
+useMono=false
+threshold=0.5
 [regions]
 columns=4
 rows=4
