Added: GIF2ASCII

--- a/options.ini
+++ b/options.ini
@@ -3,10 +3,10 @@ red=0.30
 green=0.59
 blue=0.11
 [characters]
-chars=/[]o)(+\.:;
-size=18
-width=16
-height=20
+chars=.:/+!\*()&#
+size=15
+width=9
+height=18
 antialiasing=false
 [image]
 backgroundColor=#000000
