Implemented: background inversion

--- a/options.ini
+++ b/options.ini
@@ -3,15 +3,16 @@ red=0.30
 green=0.59
 blue=0.11
 [characters]
-chars=.:/+!\*()&#
-size=15
-width=9
-height=18
+chars=.:/+![]^v
+size=13
+width=8
+height=15
 antialiasing=false
 [image]
 backgroundColor=#000000
+invertBackground=false
 useMono=false
 threshold=0.5
 [regions]
-columns=4
+columns=3
 rows=4
